{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 167,
  "lineage": "64a97ce5-ad25-66cf-3428-43cfe2312057",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-apne1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:050011372339:security-group/sg-0bc75d4436a98cc6d",
            "description": "Common security group for all k8s instances",
            "egress": [],
            "id": "sg-0bc75d4436a98cc6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cilium etcd nodeport",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connectivity test port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "common-vpc-apne1",
            "name_prefix": "",
            "owner_id": "050011372339",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02eba23ddbbf5c077"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes-vpc-apne1-to-vpc-apse1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c236ff9e22ab2e814252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c236ff9e22ab2e81",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.aws_vpc_peering_connection.r-vpc-apne1-to-vpc-apse1",
            "module.vpc_mesh.data.aws_route_tables.rts-vpc-apne1",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e702651b0e8054ae4252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e702651b0e8054ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.data.aws_route_tables.rts-vpc-apne1",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.aws_vpc_peering_connection.r-vpc-apne1-to-vpc-apse1",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes-vpc-apse1-to-vpc-apne1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.100.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0134c5a67d125eb71373368074",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0134c5a67d125eb71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.data.aws_route_tables.rts-vpc-apse1",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.aws_vpc_peering_connection.r-vpc-apne1-to-vpc-apse1",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.100.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-058cc05995924fbae373368074",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058cc05995924fbae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.data.aws_route_tables.rts-vpc-apse1",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.aws_vpc_peering_connection.r-vpc-apne1-to-vpc-apse1",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common-vpc-apne1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:050011372339:security-group/sg-09b8fbe061be615a9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09b8fbe061be615a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cilium etcd",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connectivity test",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "common-vpc-apne1",
            "name_prefix": "",
            "owner_id": "050011372339",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02eba23ddbbf5c077"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common-vpc-apse1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:050011372339:security-group/sg-07edc502487de6d8a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07edc502487de6d8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cilium etcd",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connectivity test",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "common-vpc-apse1",
            "name_prefix": "",
            "owner_id": "050011372339",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068f1f538267269b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "r-vpc-apne1-to-vpc-apse1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-054b5a870b523e763",
            "peer_owner_id": "050011372339",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-068f1f538267269b2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "tags_all": {
              "Side": "Requester"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m"
            },
            "vpc_id": "vpc-02eba23ddbbf5c077"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "a-vpc-apse1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-054b5a870b523e763",
            "peer_owner_id": "050011372339",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-068f1f538267269b2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-02eba23ddbbf5c077",
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_nat_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.aws_vpc_peering_connection.r-vpc-apne1-to-vpc-apse1",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_eip.nat",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.private",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "a-vpc-apse1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-054b5a870b523e763",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "dependencies": [
            "module.vpc_mesh.aws_vpc_peering_connection_accepter.a-vpc-apse1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "r-vpc-apne1-to-vpc-apse1",
      "provider": "module.vpc_mesh.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-054b5a870b523e763",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_peering_connection_id": "pcx-054b5a870b523e763"
          },
          "dependencies": [
            "module.vpc_mesh.aws_vpc_peering_connection_accepter.a-vpc-apse1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:050011372339:internet-gateway/igw-059e76d036d8028d1",
            "id": "igw-059e76d036d8028d1",
            "owner_id": "050011372339",
            "tags": {
              "Name": "vpc-apne1"
            },
            "tags_all": {
              "Name": "vpc-apne1"
            },
            "vpc_id": "vpc-02eba23ddbbf5c077"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1"
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059e76d036d8028d1",
            "id": "r-rtb-0e702651b0e8054ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e702651b0e8054ae",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_route_table.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:050011372339:route-table/rtb-0e702651b0e8054ae",
            "id": "rtb-0e702651b0e8054ae",
            "owner_id": "050011372339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059e76d036d8028d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.200.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-054b5a870b523e763"
              }
            ],
            "tags": {
              "Name": "vpc-apne1-public"
            },
            "tags_all": {
              "Name": "vpc-apne1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eba23ddbbf5c077"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f374b84d6e666c02",
            "route_table_id": "rtb-0e702651b0e8054ae",
            "subnet_id": "subnet-0af26ff6b484dd1e8"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_route_table.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1"
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:050011372339:subnet/subnet-0af26ff6b484dd1e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.0.0/24",
            "id": "subnet-0af26ff6b484dd1e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050011372339",
            "tags": {
              "Name": "vpc-apne1-public-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "vpc-apne1-public-ap-northeast-1a"
            },
            "vpc_id": "vpc-02eba23ddbbf5c077"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apne1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apne1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:050011372339:vpc/vpc-02eba23ddbbf5c077",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-087bac216a3360401",
            "default_route_table_id": "rtb-0c236ff9e22ab2e81",
            "default_security_group_id": "sg-01436fe8465d9c6f8",
            "dhcp_options_id": "dopt-07519ac97a24fac0d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02eba23ddbbf5c077",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c236ff9e22ab2e81",
            "owner_id": "050011372339",
            "tags": {
              "Name": "vpc-apne1"
            },
            "tags_all": {
              "Name": "vpc-apne1"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:050011372339:internet-gateway/igw-0a91781e6caf7c022",
            "id": "igw-0a91781e6caf7c022",
            "owner_id": "050011372339",
            "tags": {
              "Name": "vpc-apse1"
            },
            "tags_all": {
              "Name": "vpc-apse1"
            },
            "vpc_id": "vpc-068f1f538267269b2"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1"
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a91781e6caf7c022",
            "id": "r-rtb-0134c5a67d125eb711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0134c5a67d125eb71",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_internet_gateway.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_route_table.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:050011372339:route-table/rtb-0134c5a67d125eb71",
            "id": "rtb-0134c5a67d125eb71",
            "owner_id": "050011372339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a91781e6caf7c022",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.100.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-054b5a870b523e763"
              }
            ],
            "tags": {
              "Name": "vpc-apse1-public"
            },
            "tags_all": {
              "Name": "vpc-apse1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-068f1f538267269b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da4901f28941384c",
            "route_table_id": "rtb-0134c5a67d125eb71",
            "subnet_id": "subnet-0f00257a3d86dd480"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_route_table.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_subnet.public",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1"
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:050011372339:subnet/subnet-0f00257a3d86dd480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.200.0.0/24",
            "id": "subnet-0f00257a3d86dd480",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050011372339",
            "tags": {
              "Name": "vpc-apse1-public-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "vpc-apse1-public-ap-southeast-1a"
            },
            "vpc_id": "vpc-068f1f538267269b2"
          },
          "dependencies": [
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc.this",
            "module.vpc_mesh.module.vpcs.module.vpc-apse1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mesh.module.vpcs.module.vpc-apse1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc_mesh.module.vpcs.provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:050011372339:vpc/vpc-068f1f538267269b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-08c682d5e95fd838f",
            "default_route_table_id": "rtb-058cc05995924fbae",
            "default_security_group_id": "sg-094da6acc991bfe1b",
            "dhcp_options_id": "dopt-7aed151c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068f1f538267269b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-058cc05995924fbae",
            "owner_id": "050011372339",
            "tags": {
              "Name": "vpc-apse1"
            },
            "tags_all": {
              "Name": "vpc-apse1"
            }
          }
        }
      ]
    }
  ]
}